--- a/festival-platform/package.json
+++ b/festival-platform/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.22.2",
+    "firebase": "^11.1.0",
     "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "react": "^18.3.1",
