--- a/festival-platform/package.json
+++ b/festival-platform/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -42,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "^4.9.5"
   }
 }
