--- a/festival-platform/.gitignore
+++ b/festival-platform/.gitignore
@@ -41,6 +41,8 @@ tsconfig.tsbuildinfo
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
