--- a/festival-platform/package.json
+++ b/festival-platform/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.22.2",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "html-react-parser": "^5.2.2",
     "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "react": "^18.3.1",
