--- a/festival-platform/package.json
+++ b/festival-platform/package.json
@@ -15,6 +15,7 @@
     "html-react-parser": "^5.2.2",
     "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^8.0.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
